--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -561,11 +561,11 @@ msgstr "MenuLibre cannot be run as root."
 #: ../menulibre/MenulibreApplication.py:226
 msgid ""
 "Please see the <a "
-"href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>online "
+"href='%s'>online "
 "documentation</a> for more information."
 msgstr ""
 "Please see the <a "
-"href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>online "
+"href='%s'>online "
 "documentation</a> for more information."
 
 #: ../menulibre/MenulibreApplication.py:325
