--- a/po/gl.po
+++ b/po/gl.po
@@ -563,11 +563,11 @@ msgstr "Non é posíbel executar MenuLibre como root."
 #: ../menulibre/MenulibreApplication.py:226
 msgid ""
 "Please see the <a "
-"href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>online "
+"href='%s'>online "
 "documentation</a> for more information."
 msgstr ""
 "Vexa a <a "
-"href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>documentación en "
+"href='%s'>documentación en "
 "liña</a> para obter máis información."
 
 #: ../menulibre/MenulibreApplication.py:325
