--- a/po/lt.po
+++ b/po/lt.po
@@ -562,11 +562,11 @@ msgstr "MenuLibre negali būti vykdoma kaip root."
 #: ../menulibre/MenulibreApplication.py:226
 msgid ""
 "Please see the <a "
-"href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>online "
+"href='%s'>online "
 "documentation</a> for more information."
 msgstr ""
 "Išsamesnei informacijai, prašome žiūrėti <a "
-"href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>dokumentaciją "
+"href='%s'>dokumentaciją "
 "internete</a>."
 
 #: ../menulibre/MenulibreApplication.py:325
