--- a/po/uk.po
+++ b/po/uk.po
@@ -557,11 +557,11 @@ msgstr "Не вдалося запустити MenuLibre з правами root.
 #: ../menulibre/MenulibreApplication.py:226
 msgid ""
 "Please see the <a "
-"href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>online "
+"href='%s'>online "
 "documentation</a> for more information."
 msgstr ""
 "Подробиці в <a "
-"href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>онлайн-справці</a>"
+"href='%s'>онлайн-справці</a>"
 
 #: ../menulibre/MenulibreApplication.py:325
 msgid "Add _Launcher..."
