--- a/po/cs.po
+++ b/po/cs.po
@@ -560,11 +560,11 @@ msgstr "MenuLibre nemůže běžet jako root."
 #: ../menulibre/MenulibreApplication.py:226
 msgid ""
 "Please see the <a "
-"href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>online "
+"href='%s'>online "
 "documentation</a> for more information."
 msgstr ""
 "Pro víc informací <a "
-"href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>online "
+"href='%s'>online "
 "documentation</a> se prosím podívejte sem."
 
 #: ../menulibre/MenulibreApplication.py:325
