--- a/po/fi.po
+++ b/po/fi.po
@@ -562,11 +562,11 @@ msgstr "MenuLibreä ei voida ajaa pääkäyttäjän oikeuksin."
 #: ../menulibre/MenulibreApplication.py:226
 msgid ""
 "Please see the <a "
-"href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>online "
+"href='%s'>online "
 "documentation</a> for more information."
 msgstr ""
 "Saadaksesi lisätietoja lue <a "
-"href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>online-"
+"href='%s'>online-"
 "dokumentaatiota</a>."
 
 #: ../menulibre/MenulibreApplication.py:325
