--- a/po/it.po
+++ b/po/it.po
@@ -562,11 +562,11 @@ msgstr "MenuLibre non può essere eseguito come root"
 #: ../menulibre/MenulibreApplication.py:226
 msgid ""
 "Please see the <a "
-"href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>online "
+"href='%s'>online "
 "documentation</a> for more information."
 msgstr ""
 "Controlla la  <a "
-"href='https://wiki.smdavis.us/doku.php?id=menulibre_faq'>documentazione "
+"href='%s'>documentazione "
 "online</a> per maggiori informazioni."
 
 #: ../menulibre/MenulibreApplication.py:325
