Replace smdavis.us with bluesabre.org

--- a/menulibre.1
+++ b/menulibre.1
@@ -24,7 +24,7 @@ Show debug messages
 The full documentation for
 .B menulibre
 is maintained online at
-.URL "http://wiki.smdavis.us/doku.php?id=menulibre-docs" "the authors documentation portal" "."
+.URL "http://wiki.bluesabre.org/doku.php?id=menulibre-docs" "the authors documentation portal" "."
 .SH BUGS
 No known bugs.
 .SH AUTHOR
