--- a/po/sv.po
+++ b/po/sv.po
@@ -10,13 +10,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2018-01-03 22:16-0500\n"
-"PO-Revision-Date: 2018-01-04 04:50+0000\n"
-"Last-Translator: Sean Davis <Unknown>\n"
+"PO-Revision-Date: 2017-04-09 18:39+0000\n"
+"Last-Translator: Påvel Nicklasson <Unknown>\n"
 "Language-Team: Swedish <sv@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-01-04 05:26+0000\n"
+"X-Launchpad-Export-Date: 2018-01-04 05:31+0000\n"
 "X-Generator: Launchpad (build 18521)\n"
 "Language: sv\n"
 
