--- a/po/menulibre.pot
+++ b/po/menulibre.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-01-04 19:25-0500\n"
+"POT-Creation-Date: 2018-01-05 07:20-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -319,6 +319,17 @@ msgid "Log - Menulibre"
 msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:69
+msgid "<big><b>Parsing Errors</b></big>"
+msgstr ""
+
+#: ../data/ui/MenulibreWindow.ui.h:70
+msgid ""
+"The following desktop files have failed parsing by the underlying library, "
+"and will therefore not show up in MenuLibre. \n"
+"Please investigate these problems with the associated package maintainer."
+msgstr ""
+
+#: ../data/ui/MenulibreWindow.ui.h:72
 msgid "Search terms…"
 msgstr ""
 
@@ -687,20 +698,6 @@ msgstr ""
 msgid "Are you sure you want to delete \"%s\"?"
 msgstr ""
 
-#: ../menulibre/MenulibreApplication.py:1991
-#, python-format
-msgid ""
-"The following desktop files have failed parsing by the underlying library, "
-"and will therefore not show up in menulibre - please investigate these "
-"problems with the associated package maintainer:\n"
-"\n"
-"%s"
-msgstr ""
-
-#: ../menulibre/MenulibreApplication.py:1997
-msgid "All desktop files have been parsed successfully."
-msgstr ""
-
 #: ../menulibre/MenulibreApplication.py:2026
 msgid "Check for bad desktop files"
 msgstr ""
@@ -728,50 +725,48 @@ msgstr ""
 
 #: ../menulibre/util.py:525
 #, python-format
-msgid "%s: Unable to load as a key file due to the following error: %s"
+msgid "Unable to load as a key file due to the following error: %s"
 msgstr ""
 
 #: ../menulibre/util.py:533
 #, python-format
-msgid "%s: Start group is invalid - currently '%s', should be '%s'"
+msgid "Start group is invalid - currently '%s', should be '%s'"
 msgstr ""
 
 #. noqa
-#: ../menulibre/util.py:542
-#, python-format
-msgid "%s: Type key was not found"
+#: ../menulibre/util.py:541
+msgid "Type key was not found"
 msgstr ""
 
-#: ../menulibre/util.py:545
+#: ../menulibre/util.py:544
 #, python-format
-msgid "%s: Type is invalid - currently '%s', should be '%s'"
+msgid "Type is invalid - currently '%s', should be '%s'"
 msgstr ""
 
-#: ../menulibre/util.py:558
+#: ../menulibre/util.py:556
 #, python-format
-msgid "%s: Try exec program '%s' has not been found in the PATH"
+msgid "Try exec program '%s' has not been found in the PATH"
 msgstr ""
 
 #. noqa
-#: ../menulibre/util.py:566
-#, python-format
-msgid "%s: Exec key not found"
+#: ../menulibre/util.py:564
+msgid "Exec key not found"
 msgstr ""
 
-#: ../menulibre/util.py:572
+#: ../menulibre/util.py:570
+#, python-format
 msgid ""
-"%s: Exec program '%' is not a valid shell command according to GLib."
+"Exec program '%s' is not a valid shell command according to GLib."
 "shell_parse_argv, error: %s"
 msgstr ""
 
-#: ../menulibre/util.py:577
+#: ../menulibre/util.py:575
 #, python-format
-msgid "%s: Exec program '%s' has not been found in the PATH"
+msgid "Exec program '%s' has not been found in the PATH"
 msgstr ""
 
 #. At this point the desktop file is valid - execution should never reach
 #. here
-#: ../menulibre/util.py:582
-#, python-format
-msgid "%s: Desktop file is valid??"
+#: ../menulibre/util.py:580
+msgid "Desktop file is valid??"
 msgstr ""
