--- a/po/el.po
+++ b/po/el.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-05 21:36-0500\n"
-"PO-Revision-Date: 2018-01-04 04:21+0000\n"
-"Last-Translator: Sean Davis <Unknown>\n"
+"PO-Revision-Date: 2015-08-19 11:16+0000\n"
+"Last-Translator: Lefteris Pavlou <lepa.22@hotmail.com>\n"
 "Language-Team: Greek <el@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-01-06 04:46+0000\n"
+"X-Launchpad-Export-Date: 2018-01-06 04:51+0000\n"
 "X-Generator: Launchpad (build 18521)\n"
 "Language: el\n"
 
