--- a/po/ru.po
+++ b/po/ru.po
@@ -9,13 +9,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2018-01-05 21:36-0500\n"
-"PO-Revision-Date: 2018-01-04 04:50+0000\n"
-"Last-Translator: Rodion R. <rodikr2005@yandex.ru>\n"
+"PO-Revision-Date: 2017-12-13 04:49+0000\n"
+"Last-Translator: ned <Unknown>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-01-06 04:46+0000\n"
+"X-Launchpad-Export-Date: 2018-01-06 04:51+0000\n"
 "X-Generator: Launchpad (build 18521)\n"
 "Language: ru\n"
 
